--- a/main.css
+++ b/main.css
@@ -1,12 +1,22 @@
+dody {
+    font-family:
+}
+
 #product-overview {
     background: #ff1b68;
 }
 
-h1 {
+.section-title {
+    color: #2ddf5c
+}
+
+#product-overview h1 {
     color: white;
     font-family: 'Roboto', sans-serif;
 }
 
-.section-title {
-    color: #2ddf5c;
+h1 {
+    font-family: sans-serif;
 }
+
+/* em resumo vimos nesse modulo seletores, propriedades e valores. Para encontrar padrões podemos pesquisar no google por padrões de combinações css no mdn https://developer.mozilla.org/pt-BR/docs/Web/CSS/CSS_Reference  */
