--- a/main.css
+++ b/main.css
@@ -1,9 +1,17 @@
-dody {
-    font-family:
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Montserrat', sans-serif;
+    margin: 0;
 }
 
 #product-overview {
     background: #ff1b68;
+    width: 100%;
+    height: 528px;
+    padding: 10px;
 }
 
 .section-title {
@@ -12,11 +20,54 @@ dody {
 
 #product-overview h1 {
     color: white;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Anton', sans-serif;
 }
 
+/*
 h1 {
     font-family: sans-serif;
+} */
+
+.main-header {
+    width: 100%;
+    background-color: #2ddf5c;
+    padding: 8px 16px;
 }
+
+.main-header > div {
+    display: inline-block;
+}
+
+.main-header__brand {
+    color: #0e4f1f;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.main-nav {
+    display: inline-block;
+    text-align: right;
+    width: calc(100% - 54px);
+}
+
+.main-nav__items {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.main-nav__item {
+    display: inline-block;
+}
+
+
+
+
+
+
+
+
+
+
 
 /* em resumo vimos nesse modulo seletores, propriedades e valores. Para encontrar padrões podemos pesquisar no google por padrões de combinações css no mdn https://developer.mozilla.org/pt-BR/docs/Web/CSS/CSS_Reference  */
