--- a/deletar/main.css
+++ b/deletar/main.css
@@ -11,11 +11,11 @@ body {
     background: #ff1b68;
     width: 100%;
     height: 528px;
-    padding: 10px;
+    padding: 10px;   
 }
 
 .section-title {
-    color: #2ddf5c
+    color: #2ddf5c;
 }
 
 #product-overview h1 {
@@ -23,14 +23,13 @@ body {
     font-family: 'Anton', sans-serif;
 }
 
-/*
-h1 {
+/* h1 {
     font-family: sans-serif;
 } */
 
 .main-header {
     width: 100%;
-    background-color: #2ddf5c;
+    background: #2ddf5c;
     padding: 8px 16px;
 }
 
@@ -67,34 +66,4 @@ h1 {
 .main-nav__item a {
     text-decoration: none;
     color: #0e4f1f;
-    font-weight: bold;
-    padding: 3px 0;
 }
-
-.main-nav__item a:hover,
-.main-nav__item a:active{
-    color: white;
-    border-bottom: 5px solid white;
-}
-
-.main-nav__item--cta a {
-    color: white;
-    background: #ff1b68;
-    padding: 8px 16px;
-    border-radius: 8px;
-}
-
-.main-nav__item--cta a:hover,
-.main-nav__item--cta a:active {
-    color:#ff1b68;
-    background: white;
-    border: none;
-}
-
-
-
-
-
-
-
-/* em resumo vimos nesse modulo seletores, propriedades e valores. Para encontrar padrões podemos pesquisar no google por padrões de combinações css no mdn https://developer.mozilla.org/pt-BR/docs/Web/CSS/CSS_Reference  */
