--- a/01-more-on-selectors-1-start-code/main.css
+++ b/01-more-on-selectors-1-start-code/main.css
@@ -14,8 +14,20 @@ a {
     margin: 10px;
 }
 
+a.active {
+    color: #521751;
+}
+
+a:not(.active) {
+    color:blue;
+}
+
 .main-section {
     height: 800px;
     border: 1px solid #ccc;
     padding: 16px;
+}
+
+.highLighted {
+    border: 2px solid #fa923f;
 }
