--- a/00-Init/main.css
+++ b/00-Init/main.css
@@ -15,13 +15,39 @@ body {
 }
 
 .section-title {
-    color: #2ddf5c
+    color: #2ddf5c;
+    text-align: center;
 }
 
 #product-overview h1 {
     color: white;
     font-family: 'Anton', sans-serif;
 }
+
+.plan {
+    background-color: #d5ffdc;
+    text-align: center;
+    padding: 16px;
+    margin: 8px;
+    display: inline-block;
+    width: 30%;
+    vertical-align: middle;
+}
+
+.plan--highLighted {
+    background: #19b84c;
+    color: white;
+    box-shadow: 2px 2px 2px 2px rgb(0, 0, 0, 0.50);
+}
+
+.plan__annotation {
+    background: white;
+    color: #19b84c;
+    padding: 8px;
+    box-shadow: 2px 2px 2px 2px rgb(0, 0, 0, 0.50);
+    border-radius: 8px;
+}
+
 
 /*
 h1 {
