--- a/00-Init/main.css
+++ b/00-Init/main.css
@@ -87,6 +87,49 @@ body {
     color: #0e4f1f;
 }
 
+.button:focus {
+    outline: none;
+}
+
+#key-features {
+    background: #ff1b68;
+}
+
+#key-features .section-title {
+    color: white;
+    margin-top: 80px;
+    padding: 16px;
+}
+
+.key-feature__list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+.key-feature {
+    display: inline-block;
+    width: 30%;
+    vertical-align: top;
+}
+
+.key-feature__image {
+    background: #ffcede;
+    width: 128px;
+    height: 128px;
+    border: 2px solid #424242;
+    border-radius: 50%;
+    margin: auto;
+}
+
+.key-feature__description {
+    text-align: center;
+    font-weight: bold;
+    color: white;
+    font-size: 20px;
+}
+
 
 /*
 h1 {
