--- a/00-Init/main.css
+++ b/00-Init/main.css
@@ -199,10 +199,33 @@ h1 {
     border: none;
 }
 
+.main-footer {
+    background: black;
+    padding: 32px;
+    margin-top: 48px;
+}
+
+.main-footer__links {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+.main-footer__link {
+    display: inline-block;
+    margin: 0 16px;
+}
+
+.main-footer__link a {
+    color: white;
+    text-decoration: none;
+}
+
+.main-footer__link a:hover,
+.main-footer__link a:active {
+    color: #ccc;
+}
 
 
 
-
-
-
-/* em resumo vimos nesse modulo seletores, propriedades e valores. Para encontrar padrões podemos pesquisar no google por padrões de combinações css no mdn https://developer.mozilla.org/pt-BR/docs/Web/CSS/CSS_Reference  */
