--- a/00-Init/shared.css
+++ b/00-Init/shared.css
@@ -1,8 +1,12 @@
 
 .main-header {
     width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
     background-color: #2ddf5c;
     padding: 8px 16px;
+    z-index: 0;
 }
 
 .main-header > div {
