--- a/00-Init/shared.css
+++ b/00-Init/shared.css
@@ -1,3 +1,11 @@
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Montserrat', sans-serif;
+    margin: 0;
+}
 
 .main-header {
     width: 100%;
@@ -14,11 +22,21 @@
     vertical-align: middle;
 }
 
-.main-header__brand {
-    color: #0e4f1f;
+.main-header__brand { 
+    color:  #0e4f1f;
     text-decoration: none;
     font-weight: bold;
     font-size: 22px;
+    height: 22px;
+    /* width: 20px; */
+   display: inline-block;
+
+}
+
+.main-header__brand img {
+    height: 100%;
+    /* width: 100%; */
+  
 }
 
 .main-nav {
