--- a/00-Init/customers/customers.css
+++ b/00-Init/customers/customers.css
@@ -12,11 +12,24 @@
     margin-top: 96px;
   }
   
+.testimonial__image-container {
+  width: 65%;
+  display: inline-block;
+  vertical-align: middle;
+  box-shadow: 3px 3px 5px 3px rgba(0, 0, 0, 0.4);
+}
+
+.testimonial__image {
+  width: 100%;
+  vertical-align: top;
+}
+
   .testimonial__info {
     text-align: right;
     padding: 14px;
     display: inline-block;
     vertical-align: middle;
+    width: 30%;
   }
   
   #customer-2.testimonial {
