--- a/00-Init/main.css
+++ b/00-Init/main.css
@@ -15,7 +15,9 @@ body {
     background-position: left 10% bottom 20%; 
     background-repeat: no-repeat;
     background-origin: border-box; 
-    background-clip: border-box; */
+    background-clip: border-box; 
+    background-image: linear-gradient(180deg, red 70%, blue 60%, rgba(0, 0, 0, 0.5)); 
+    background-image: radial-gradient(ellipse farthest-corner at 20& 50%, red, blue, green ); */
     width: 100%;
     height: 528px;
     padding: 10px;
