--- a/00-uHost/main.css
+++ b/00-uHost/main.css
@@ -9,7 +9,7 @@ body {
 }
 
 #product-overview {
-    background: url("img/freedom.jpg") left 10% bottom 20%/cover no-repeat border-box;
+    background: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent), url("img/freedom.jpg") left 10% bottom 20%/cover no-repeat border-box, #ff1b68;
    /* background-image: url("freedom.jpg");
     background-size: cover;
     background-position: left 10% bottom 20%; 
@@ -128,6 +128,7 @@ body {
     border: 2px solid #424242;
     border-radius: 50%;
     margin: auto;
+    padding: 20px;
 }
 
 .key-feature__description {
