--- a/00-uHost/packages/packages.css
+++ b/00-uHost/packages/packages.css
@@ -3,7 +3,8 @@ main {
 }
 
 .background { 
-    background: url("../img/plans-background.jpg");
+    background: url("../img/plans-background.jpg") center/cover;
+    filter: grayscale(40%);
     width: 100%;
     height: 100%;
     position: fixed;
