--- a/00-uHost/customers/customers.css
+++ b/00-uHost/customers/customers.css
@@ -1,6 +1,8 @@
 .testimonial {
     font-size: 20px;
     margin: 48px 0;
+    /* padding: 0 10px; 
+    display: inline; */
   }
   
   .testimonial__list {
@@ -13,10 +15,11 @@
   }
   
 .testimonial__image-container {
-  width: 65%;
+  width: 65%; /* 50% */
   display: inline-block;
   vertical-align: middle;
   box-shadow: 3px 3px 5px 3px rgba(0, 0, 0, 0.4);
+  /* position: relative; */
 }
 
 .testimonial__image {
