--- a/00-uHost/shared.css
+++ b/00-uHost/shared.css
@@ -7,8 +7,16 @@ body {
     margin: 0;
 }
 
-.main-header {
+.backdrop {
+    position: relative;
+    z-index: 100;
     width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+}
+
+.main-header {
+    width: 100%; 
     position: fixed;
     top: 0;
     left: 0;
