--- a/00-uHost/customers/customers.css
+++ b/00-uHost/customers/customers.css
@@ -1,8 +1,6 @@
 .testimonial {
-    font-size: 20px;
-    margin: 48px 0;
-    /* padding: 0 10px; 
-    display: inline; */
+    font-size: 1.2rem;
+    margin: 3rem 0;
   }
   
   .testimonial__list {
@@ -11,15 +9,15 @@
   }
   
   .testimonial:first-of-type {
-    margin-top: 96px;
+    margin-top: 6rem;
   }
   
 .testimonial__image-container {
-  width: 65%; /* 50% */
+  width: 65%;
+  max-width: 36.2rem;
   display: inline-block;
   vertical-align: middle;
   box-shadow: 3px 3px 5px 3px rgba(0, 0, 0, 0.4);
-  /* position: relative; */
 }
 
 .testimonial__image {
@@ -29,7 +27,7 @@
 
   .testimonial__info {
     text-align: right;
-    padding: 14px;
+    padding: 0.9rem;
     display: inline-block;
     vertical-align: middle;
     width: 30%;
@@ -44,13 +42,14 @@
   }
   
   .testimonial__name {
-    margin: 3px;
+    margin: 0.2rem;
     color: #ff5454;
+    font-size: 2rem;
   }
   
   .testimonial__subtitle {
     margin: 0;
-    font-size: 18px;
+    font-size: 1.1rem;
     color: #ccc;
   }
   
@@ -65,7 +64,7 @@
   }
   
   .testimonial__text {
-    margin: 3px;
+    margin: 0.2rem;
   }
   
   
