--- a/00-uHost/main.css
+++ b/00-uHost/main.css
@@ -19,9 +19,9 @@ body {
     background-image: linear-gradient(180deg, red 70%, blue 60%, rgba(0, 0, 0, 0.5)); 
     background-image: radial-gradient(ellipse farthest-corner at 20& 50%, red, blue, green ); */
     width: 100%; 
-    height: 528px;
+    height: 33rem;
     padding: 10px;
-    margin-top: 43px;
+    margin-top: 2.6rem;
     position: relative;
 }
 
@@ -47,8 +47,8 @@ body {
 .plan {
     background-color: #d5ffdc;
     text-align: center;
-    padding: 16px;
-    margin: 8px;
+    padding: 1rem;
+    margin: 0.5rem;
     display: inline-block;
     width: 30%;
     vertical-align: middle;
@@ -91,21 +91,21 @@ body {
 }
 
 .plan__feature {
-    margin: 8px 0;
+    margin: 0.5rem 0;
 }
 
 
 
 #key-features {
     background: #ff1b68;
-    margin-top: 80px;
-    padding: 16px;
+    margin-top: 5rem;
+    padding: 1rem;
 
 }
 
 #key-features .section-title {
     color: white;
-    margin: 32px;
+    margin: 2rem;
 }
 
 .key-feature__list {
@@ -123,8 +123,8 @@ body {
 
 .key-feature__image {
     background: #ffcede;
-    width: 128px;
-    height: 128px;
+    width: 8rem;
+    height: 8rem;
     border: 2px solid #424242;
     border-radius: 50%;
     margin: auto;
@@ -135,7 +135,7 @@ body {
     text-align: center;
     font-weight: bold;
     color: white;
-    font-size: 20px;
+    font-size: 1.2rem;
 }
 
 
