--- a/00-uHost/shared.css
+++ b/00-uHost/shared.css
@@ -8,12 +8,17 @@ body {
 }
 
 .backdrop {
-    position: relative;
+    position: fixed;
+    display: none;
+    top: 0;
+    left: 0;
     z-index: 100;
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
+
 }
+
 
 .main-header {
     width: 100%; 
@@ -21,7 +26,7 @@ body {
     top: 0;
     left: 0;
     background-color: #2ddf5c;
-    padding: 8px 16px;
+    padding: 0.5rem 1rem;
     z-index: 1;
 }
 
@@ -34,11 +39,9 @@ body {
     color:  #0e4f1f;
     text-decoration: none;
     font-weight: bold;
-    font-size: 22px;
-    height: 22px;
-    /* width: 20px; */
-   display: inline-block;
-
+    font-size: 1.3rem;
+    height: 1.3rem;
+    display: inline-block;
 }
 
 .main-header__brand img {
@@ -62,7 +65,7 @@ body {
 
 .main-nav__item {
     display: inline-block;
-    margin: 0 16px;
+    margin: 0 1rem;
 }
 
 .main-nav__item a {
@@ -81,8 +84,8 @@ body {
 .main-nav__item--cta a {
     color: white;
     background: #ff1b68;
-    padding: 8px 16px;
-    border-radius: 8px;
+    padding: 0.5rem 1rem;
+    border-radius: 0.5rem;
 }
 
 .main-nav__item--cta a:hover,
@@ -94,8 +97,8 @@ body {
 
 .main-footer {
     background: black;
-    padding: 32px;
-    margin-top: 48px;
+    padding: 2rem;
+    margin-top: 3rem;
 }
 
 .main-footer__links {
@@ -107,7 +110,7 @@ body {
 
 .main-footer__link {
     display: inline-block;
-    margin: 0 16px;
+    margin: 0 1rem;
 }
 
 .main-footer__link a {
@@ -125,8 +128,8 @@ body {
     color: white;
     font: inherit;
     border: 1px solid #0e4f1f;
-    padding: 8px;
-    border-radius: 8px;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
     font-weight: bold;
     cursor: pointer;
 }
