--- a/00-uHost/packages/packages.css
+++ b/00-uHost/packages/packages.css
@@ -5,8 +5,8 @@ main {
 .background { 
     background: url("../img/plans-background.jpg") center/cover;
     filter: grayscale(40%);
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     position: fixed;
     z-index: -1;
 }
@@ -36,8 +36,8 @@ main {
     position: absolute;
     top: 0;
     right: 0;
-    margin: 1,2rem;
-    font-size: 12px;
+    margin: 1.2rem;
+    font-size: 0.8rem;
     color: white;
     background: #ff5454;
     padding: 0.5rem;
