--- a/00-uHost/shared.css
+++ b/00-uHost/shared.css
@@ -9,14 +9,13 @@ body {
 
 .backdrop {
     position: fixed;
-    display: none;
+    display: none; 
     top: 0;
     left: 0;
     z-index: 100;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background: rgba(0, 0, 0, 0.5);
-
 }
 
 
@@ -85,7 +84,7 @@ body {
     color: white;
     background: #ff1b68;
     padding: 0.5rem 1rem;
-    border-radius: 0.5rem;
+    border-radius: 8px;
 }
 
 .main-nav__item--cta a:hover,
@@ -129,7 +128,7 @@ body {
     font: inherit;
     border: 1px solid #0e4f1f;
     padding: 0.5rem;
-    border-radius: 0.5rem;
+    border-radius: 8px;
     font-weight: bold;
     cursor: pointer;
 }
