--- a/00-uHost/main.css
+++ b/00-uHost/main.css
@@ -157,11 +157,12 @@ body {
     text-align: center;
 }
 
+/*
 .key-feature {
-    display: inline-block;
-    width: 30%;
+    display: inline-block; 
+    width: 30%; 
     vertical-align: top;
-}
+} */
 
 .key-feature__image {
     background: #ffcede;
@@ -178,6 +179,15 @@ body {
     font-weight: bold;
     color: white;
     font-size: 1.2rem;
+}
+
+@media (min-width: 40rem)  {
+    .key-feature {
+         display: inline-block; 
+         width: 30%;
+         max-width: 25rem;
+         vertical-align: top;
+     }
 }
 
 
