--- a/00-uHost/main.css
+++ b/00-uHost/main.css
@@ -34,7 +34,7 @@ body {
     font-size: 1.6rem;
 }
 
-@media (min-width: 40rem) {
+@media (min-width: 40rem) and (min-height: 60rem) {
     #product-overview {
         height: 50vh;
         background-position: 50% 25%;
@@ -110,7 +110,7 @@ body {
     padding: 0;
 }
 
-@media (min-width: 40rem)  {
+@media (min-width: 40rem) and (orientation: landscape) {
     .plan__list {
         width: 100%;
         text-align: center;
@@ -129,13 +129,9 @@ body {
     }
 }
 
-
-
-
 .plan__feature {
     margin: 0.5rem 0;
 }
-
 
 
 #key-features {
